fixed button color on iphone

--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
+body {
+    height: 100%;
+}
 .btn-lg {
     width: 100px; 
     height: 100px; 
     font-size: 50px;
-    background: lightgrey;
+    background: orange;
 
 } 
 #result {
@@ -15,6 +18,7 @@
     width: 475px;
     padding: 20px;
     margin: 10px;
+    height: 100%;
 }
 @media screen and (max-width: 500px) {
     .btn-lg {
@@ -30,5 +34,6 @@
         width: 375px;
         height: 100%;
         padding: 31px;
+        padding-top: 200px;
     }
 }
